--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -597,6 +597,22 @@ nav {
 	a {
 		order: 2;
 		grid-template-rows: repeat(auto-fit, minmax(4em, 1fr));
+		padding: 2px;
+		transition: color 0.3s ease !important;
+		text-decoration: none;
+		font-weight: 600;
+		color: $winter-night-dk;
+		@media (prefers-color-scheme: dark) {
+			color: $winter-day-dk;
+		}
+		&:hover {
+			color: $link-hover;
+			transition: color 0.3s ease !important;
+		}
+	}
+	/*a {
+		order: 2;
+		grid-template-rows: repeat(auto-fit, minmax(4em, 1fr));
 		border-radius: 3px;
 		padding: 4px 10px;
 		transition: background 0.3s ease !important;
@@ -613,7 +629,7 @@ nav {
 			transition: background 0.3s ease !important;
 			box-shadow: none !important;
 		}
-	}
+	}*/
 	p {
 		order: 3;
 		line-height: 1.2em;
@@ -623,7 +639,7 @@ nav {
 		gap: 1em;
 		grid-template-columns: repeat(auto-fit, minmax(11em, 1fr));
 		padding-left: 0 !important;
-		text-align: center;
+		place-items: center;
 
 		.rss-item { 
 			display: grid;
