--- a/static/css/main.css
+++ b/static/css/main.css
@@ -760,6 +760,7 @@ nav ul li a:hover {
   grid-template-rows: repeat(auto-fit, minmax(4em, 1fr));
   padding: 2px;
   transition: color 0.3s ease !important;
+  box-shadow: none !important;
   text-decoration: none;
   font-weight: 600;
   color: #2E3440;
@@ -774,6 +775,7 @@ nav ul li a:hover {
 .music a:hover {
   color: dodgerblue;
   transition: color 0.3s ease !important;
+  box-shadow: none !important;
 }
 
 .music p {
