--- a/static/css/main.css
+++ b/static/css/main.css
@@ -791,12 +791,12 @@ nav ul li a:hover {
   place-items: center;
 }
 
-.music .rss-box-music ul .rss-item {
-  display: grid;
-}
-
 .music .rss-box-music ul .rss-item h2, .music .rss-box-music ul .rss-item h3 {
   display: none;
+}
+
+.music .rss-box-music li {
+  display: flex;
 }
 
 /* Search field width fix ------- */
