Add light analytics via GoatCounter

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -15,7 +15,7 @@
       <link rel="shortcut icon" href="https://micro.blog/{{ .Site.Author.username }}/favicon.png" type="image/x-icon" />
   
     <!-- Analytics via GoatCounter -->
-    <script data-goatcounter=""https://gregmoore.goatcounter.com/count" async src=""//gc.zgo.at/count.js"></script>
+    <script data-goatcounter="https://gregmoore.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="{{ "css/main.min.css" | relURL }}">
