--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,4 +4,8 @@
 	  </a>
 	<p>Designed by <a href="/colophon">Me</a><br>Powered by <a href="https://micro.blog/{{ .Site.Author.username }}" rel="me">Micro.blog</a></p>
 	<p id="rss"><a href="/feed.xml">RSS</a> &bull; <a href="/feed.json">JSON</a></p>
+
+	<!-- Analytics via GoatCounter -->
+	<script data-goatcounter="https://gregmoore.goatcounter.com/count"
+	async src="//gc.zgo.at/count.js"></script>
 </footer>
