--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,5 +7,5 @@
 
 	<!-- Analytics via GoatCounter -->
 	<script data-goatcounter="https://gregmoore.goatcounter.com/count"
-	async src="//gc.zgo.at/count.js"></script>
+	async src="https://gc.zgo.at/count.js"></script>
 </footer>
