Add GoatCounter analytics

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,6 +6,11 @@
 	<p id="rss"><a href="/feed.xml">RSS</a> &bull; <a href="/feed.json">JSON</a></p>
 
 	<!-- Analytics via GoatCounter -->
+	<script>
+		window.goatcounter = {
+			path: function(p) { return location.host + p }
+		}
+	</script>
 	<script data-goatcounter="https://gregmoore.goatcounter.com/count"
-	async src="//gc.zgo.at/count.js"></script>
+		async src="//gc.zgo.at/count.js"></script>
 </footer>
