--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -610,7 +610,7 @@ nav {
 			padding-top: 0;
 			padding-bottom: 4px;
 		}
-		.rss-item a {
+		a {
 			order: 2;
 			grid-template-rows: repeat(auto-fit, minmax(4em, 1fr));
 			padding: 2px;
