--- a/static/css/main.css
+++ b/static/css/main.css
@@ -775,8 +775,8 @@ nav ul li a:hover {
   box-shadow: none !important;
 }
 
-.music .rss-box-music li a :nth-of-type(2) {
-  flex-direction: column-reverse;
+.music .rss-box-music li a :nth-last-child(-n+1) {
+  order: 1;
 }
 
 .music .rss-box-music li p {
