Music RSS display fixes

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -627,7 +627,7 @@ nav {
 				transition: color 0.3s ease !important;
 				box-shadow: none !important;
 			}
-			:nth-last-child(1) {
+			:nth-last-of-type(1) {
 				order: 1;
 			}
 		}
