--- a/static/css/main.css
+++ b/static/css/main.css
@@ -740,19 +740,13 @@ nav ul li a:hover {
   display: none;
 }
 
-.music .rss-box-music li {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: auto;
-}
-
-.music .rss-box-music li img {
+.music .rss-box-music ul .rss-item img {
   aspect-ratio: 1 / 1;
   padding-top: 0;
   padding-bottom: 4px;
 }
 
-.music .rss-box-music li a {
+.music .rss-box-music ul .rss-item a {
   grid-template-rows: repeat(auto-fit, minmax(4em, 1fr));
   padding: 2px;
   transition: color 0.3s ease !important;
@@ -763,24 +757,30 @@ nav ul li a:hover {
 }
 
 @media (prefers-color-scheme: dark) {
-  .music .rss-box-music li a {
+  .music .rss-box-music ul .rss-item a {
     color: #D8DEE9;
   }
 }
 
-.music .rss-box-music li a:hover {
+.music .rss-box-music ul .rss-item a:hover {
   color: dodgerblue;
   transition: color 0.3s ease !important;
   box-shadow: none !important;
 }
 
-.music .rss-box-music li a :nth-last-of-type(1) {
+.music .rss-box-music ul .rss-item a :nth-last-of-type(1) {
   order: 1;
 }
 
-.music .rss-box-music li p {
+.music .rss-box-music ul .rss-item p {
   order: 3;
   line-height: 1.2em;
+}
+
+.music .rss-box-music li {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: auto;
 }
 
 /* Search field width fix ------- */
