--- a/layouts/index.html
+++ b/layouts/index.html
@@ -28,6 +28,15 @@
                     <div class="post-list-item-content">
                         {{ .Content }}
                     </div>
+                    {{ if.Params.categories }}
+                    <hr>
+                    <span class="categories-inline">
+                        <ion-icon name="pricetags-outline"></ion-icon>
+                        {{ range .Params.categories }}
+                        <a href="/categories/{{ . | urlize }}"> {{ . }} </a>
+                        {{ end }}    
+                    </span>
+                    {{ end }}
                 </div>
                 {{ end }}
             </div>
