--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,7 +3,7 @@
 		<img class="u-photo avatar" src="{{ .Site.Author.avatar }}" width="96" height="96">
 	  </a>
 	<p>Designed by <a href="/colophon">Me</a><br>Powered by <a href="https://micro.blog/{{ .Site.Author.username }}" rel="me">Micro.blog</a></p>
-	<p id="rss"><a href="/feed.xml">RSS</a> &bull; <a href="/feed.json">JSON</a></p>
+	<p id="rss"></ion-icon><a href="/feed.xml">RSS</a> &bull; <a href="/feed.json">JSON</a></p>
 
 	<!-- Analytics via GoatCounter -->
 	<script>
@@ -13,4 +13,8 @@
 	</script>
 	<script data-goatcounter="https://gregmoore.goatcounter.com/count"
 		async src="//gc.zgo.at/count.js"></script>
+
+	 <!-- ionicon Library -->
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </footer>
