--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -50,7 +50,7 @@ blockquote {
 		content: "\201C";
 		font-family: Georgia, serif;
 		font-weight: bold;
-		font-size: 4em;
+		font-size: 4rem;
 		line-height: 0.1em;
 		margin-right: 0.25em;
 		vertical-align: -0.5em;
@@ -116,7 +116,7 @@ footer {
 		margin: 0.5em;
 	}
 	p {
-		font-size: 0.8em;
+		font-size: 0.8rem;
 		font-weight: 600;
 		padding: 0.5em;
 		a {
@@ -295,7 +295,7 @@ footer {
 	}
 }
 .microblog_time {
-	font-size: 0.7em;
+	font-size: 0.7rem;
 	padding-top: 10px;
 }
 .conversation-on-mb {
@@ -477,7 +477,7 @@ nav {
 	.logo {
 		color: $link-hover;
 		font-family: "Rock Salt", handwriting;
-		font-size: 1.5em;
+		font-size: 1.5rem;
 		line-height: 2em;
 		margin: 0;
 		transition: all 0.3s ease;
@@ -504,7 +504,7 @@ nav {
 			a {
 				outline: none;
 				color: $link;
-				font-size: 1em;
+				font-size: 1rem;
 				text-decoration: none;
 				letter-spacing: 0.04em;
 				transition: all 0.3s ease;
@@ -542,7 +542,7 @@ nav {
 			a {
 				opacity: 0;
 				color: #fff;
-				font-size: 2em;
+				font-size: 2rem;
 				transform: translateY(-20px);
 				transition: all 0.3s ease;
 			}
