--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,6 +4,10 @@
 /* Colors ------- */
 @import url(https://fonts.bunny.net/css?family=fraunces:300,400,600,800|rock-salt:400);
 /* Global Styles ------- */
+html {
+  font-size: 16px;
+}
+
 body {
   padding: 0;
   margin: 0;
@@ -34,6 +38,7 @@ h5,
 h6 {
   font-family: "Fraunces", serif;
   font-weight: 800;
+  line-height: 0.5em;
   color: #2E3440;
 }
 
