--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -6,6 +6,10 @@ $breakpoint-desktop: 12000px;
 @import url(https://fonts.bunny.net/css?family=fraunces:300,400,600,800|rock-salt:400);
 
 /* Global Styles ------- */
+html {
+	font-size: 16px;
+}
+
 body {
 	padding: 0;
 	margin: 0;
@@ -33,6 +37,7 @@ h5,
 h6 {
 	font-family: "Fraunces", serif;
 	font-weight: 800;
+	line-height: 0.5em;
 	color: $winter-night-dk;
 	@media (prefers-color-scheme: dark) {
 		color: $winter-day-lt;
