--- a/static/css/main.css
+++ b/static/css/main.css
@@ -57,7 +57,7 @@ blockquote {
   background-color: #E5E9F0;
   border-left: 10px solid #5E81AC;
   border-radius: 0.5em;
-  padding: 0.5em 10px;
+  padding: 0.5em;
   quotes: "“" "”" "‘" "’";
 }
 
@@ -70,6 +70,13 @@ blockquote:before {
   line-height: 0.1em;
   margin-right: 0.25em;
   vertical-align: -0.5em;
+}
+
+@media screen and (max-width: 560px) {
+  blockquote {
+    margin: 0;
+    border-left: none;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
